--- a/style/screen.css
+++ b/style/screen.css
@@ -3,3 +3,13 @@ body {
   background: url(../images/bg.png) no-repeat top center;
   text-align: center;
 }
+
+#loading {
+    width: 100%;
+    height: 100%;
+    background: #000 url(../images/ajax-loader.gif) no-repeat center center;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
