--- a/style/screen.css
+++ b/style/screen.css
@@ -4,6 +4,14 @@ body {
   text-align: center;
 }
 
+h1 {
+    display: none;
+    font-size: 140px;
+    font-weight: normal;
+    line-height: 100%;
+    color: #FFF;
+}
+
 #loading {
     width: 100%;
     height: 100%;
@@ -13,3 +21,25 @@ body {
     left: 0;
 
 }
+#controls {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-indent: 0;
+    width: 1200px;
+    position: relative;
+    margin: auto;
+}
+#controls li {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0
+}
+
+#controls .bass {background: url(../images/bass.png); left: 0}
+#controls .drums {background: url(../images/drums.png); left: 200px}
+#controls .keys {background: url(../images/keys.png); left: 400px}
+#controls .guitar {background: url(../images/guitar.png); right: 400px}
+#controls .synth {background: url(../images/synth.png); right: 200px}
+#controls .voice {background: url(../images/voice.png); right: 0}
