--- a/style/screen.css
+++ b/style/screen.css
@@ -2,12 +2,12 @@ body {
   font-family: 'Open Sans', sans-serif;
   background: url(../images/bg.png) no-repeat top center;
   text-align: center;
-  color: #111;
+  color: #fff;
   font-size: 16px;
 }
 
 a {
-    color: #111;
+    color: #fff;
 }
 
 h1 {
@@ -20,25 +20,13 @@ canvas {
     display: none;
 }
 
-#loading {
-    width: 100%;
-    height: 100%;
-    background: #000 url(../images/ajax-loader.gif) no-repeat center center;
-    position: absolute;
-    top: 0;
-    left: 0;
-
-}
-
 #intro {
-    width: 460px;
-    background-color: #FFF;
-    color: #333;
+    width: 500px;
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 12px;
-    margin-top: 200px;
+    margin-top: 60px;
 }
 
 #intro p {
@@ -48,4 +36,12 @@ canvas {
 #intro a {
     font-weight: bold;
     font-size: 36px;
+    text-decoration: none;
+    background: #FFF;
+    color: #111;
+    display: inline-block;
+    padding: 8px 12px;
+    border-radius: 6px;
+    display: none;
+
 }
